mobile-overflow-fix

--- a/_baseLayout.scss
+++ b/_baseLayout.scss
@@ -14,7 +14,6 @@ body {
     padding: 0;
     padding-bottom: 2em;
     margin-bottom: 1em;
-    overflow-y: hidden;
     left: 0;
     color: $paragraph;
     position: relative;
