--- a/_breakpoints.scss
+++ b/_breakpoints.scss
@@ -13,5 +13,6 @@ body {
     @include large {
         flex-direction: row;
         overflow-x: hidden;
+        overflow-y: hidden;
     }
 }
